Prometheus and Grafana/load-balancer-prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  type: LoadBalancer
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: 9090
